tests/ui/attributes/z-crate-attr/injection2.stderr
error: unexpected token: `#`
  --> <crate attribute>:1:23
   |
LL | #![feature(yeet_expr)]#![allow(warnings)]
   |                       ^ unexpected token after this

error[E0601]: `main` function not found in crate `injection2`
  --> $DIR/injection2.rs:3:12
   |
LL | fn foo() {}
   |            ^ consider adding a `main` function to `$DIR/injection2.rs`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0601`.
